# cufflinks

./: .gitignore  CMakeLists.txt  autogen.sh  ax_bam.m4  ax_check_eigen.m4  cmakeconfig.h.in  configure.ac
cmake/: CheckDIRSymbolExists.cmake  CheckPrototypeExists.cmake  FindEigen3.cmake  FindHTSlib.cmake  FindSamtools.cmake  LibFindMacros.cmake  ac_header_stdc.cmake  check_c_inline.cmake  cufflinks_all_checks.cmake  cufflinks_dependencies.cmake  cufflinks_feature_checks.cmake  cufflinks_options.cmake  cufflinks_package_setup.cmake
m4/: ax_check_eigen.m4
src/: CMakeLists.txt  Makefile.am  abundances.cpp  common.h
src/locfit/: arith.c  lfd.c
